--- a/index.html
+++ b/index.html
@@ -252,8 +252,8 @@
             </div>
             <div class="call">
                 <div class="subtitle">Или позвоните нам</div>
-                <a href="#" class="link">+380678341034</a>
-                <a href="#" class="link">+380500941356</a>
+                <a href="tel:+79999999991" class="link">+7(999)999-99-91</a>
+                <a href="tel:+79999999991" class="link">+7(999)999-99-91</a>
             </div>
         </div>
     </footer>
