--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             </nav>
         </div>
         <div class="header__right-block">
-            <button data-modal class="btn btn_white">Связаться с нами</button>
+            <button data-modal class="btn btn_white">Связаться с нами!</button>
         </div>
     </header>
     <div class="sidepanel">
