--- a/index.html
+++ b/index.html
@@ -112,7 +112,8 @@
                         <img src="icons/right.svg" alt="next">
                     </div>
                 </div>
-                <div class="offer__slider-wrapper">
+                <!-- Верстка для простого слайдера -->
+                <!-- <div class="offer__slider-wrapper">
                     <div class="offer__slide">
                         <img src="img/slider/pepper.jpg" alt="pepper">
                     </div>
@@ -125,7 +126,25 @@
                     <div class="offer__slide">
                         <img src="img/slider/paprika.jpg" alt="paprika">
                     </div>
+                </div> -->
+                <!-- Верстка для слайдера-карусели -->
+                <div class="offer__slider-wrapper">
+                    <div class="offer__slider-inner">
+                        <div class="offer__slide">
+                            <img src="img/slider/pepper.jpg" alt="pepper">
+                        </div>
+                        <div class="offer__slide">
+                            <img src="img/slider/food-12.jpg" alt="food">
+                        </div>
+                        <div class="offer__slide">
+                            <img src="img/slider/olive-oil.jpg" alt="oil">
+                        </div>
+                        <div class="offer__slide">
+                            <img src="img/slider/paprika.jpg" alt="paprika">
+                        </div>
+                    </div>
                 </div>
+
             </div>
         </div>
     </div>
